<resources>
    <string name="app_name">GymFinder</string>
    <string name="welcome">Welcome!</string>
    <string name="hello_world">Hello World!</string>
    <string name="button_save">SAVE</string>
    <string name="button_create">CREATE</string>
    <string name="button_add">ADD</string>
    <string name="cd_back_arrow">Back</string>


    <string name="sign_in_title">Sign In</string>
    <string name="create_account_title">Create Account</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_username">Username</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="button_sign_in">SIGN IN</string>
    <string name="register_new_user_link">Register for New User</string>
    <string name="already_have_account_link">Already have an account?</string>
    <string name="label_gender">Gender</string>
    <string name="radio_button_male">Male</string>
    <string name="radio_button_female">Female</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="cd_toggle_password_visibility">Toggle password visibility</string>
    <string name="cd_toggle_confirm_password_visibility">Toggle confirm password visibility</string>


    <string name="home_tagline">Help us help you find the perfect gym!!</string>
    <string name="button_go"><![CDATA[>>>>GO>>>>]]></string>
    <string name="button_view_profile">VIEW PROFILE</string>
    <string name="potential_gym_list">Potential Gym List</string>

<string name="hint_admin_code">Admin Code</string>
    <string name="cd_admin_code">Admin Code Input</string>

    <string name="edit_profile_title">Edit Profile</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_street_number">Street Number</string>
    <string name="hint_street_name">Street Name</string>
    <string name="btn_editprofile">EDIT PROFILE</string>
    <string name="btn_deleteprofile">DELETE PROFILE</string>
    <string name="btn_profilenotification">PROFILE NOTIFICATIONS</string>
    <string name="btn_profilechangepassword">CHANGE PASSWORD</string>
    <string name="btn_profile_sign_out">SIGN OUT</string>


    <string name="gym_list_title">Gym List</string>
    <string name="hint_gym_description">Gym Description</string>
    <string name="hint_price">Price</string>
    <string name="hint_operational_hours">Operational Hours</string>
    <string name="button_accept">ACCEPT</string>
    <string name="button_reject">REJECT</string>


    <string name="question_list_title">Question List</string>
    <string name="add_question_title">Add Question</string>
    <string name="edit_question_title">Edit Question</string>
    <string name="questionnaire_title">Questionnaire</string>
    <string name="questionnaire_page_title">Questionaire</string>
    <string name="hint_enter_question">Enter Question</string>
    <string name="hint_question">Question</string>
    <string name="hint_enter_budget">Enter your monthly budget</string>
    <string name="radio_button_no">No</string>
    <string name="radio_button_yes">Yes</string>
    <string name="button_add_question">Add Question</string>
    <string name="button_edit_question">Edit Question</string>
    <string name="button_delete_question">Delete Question</string>
    <string name="delete_question">Delete Question</string>
    <string name="edit_question">Edit Question</string>
    <string name="back_button">Back Button</string>

    <string-array name="user_types">
        <item>Select User Type</item>
        <item>User</item>
        <item>Gym Admin</item>
        <item>Admin</item>
    </string-array>
    <!-- GymAdminHomePage -->
    <string name="app_title">Gym Finder</string>
    <string name="btn_edit_gym"> Edit gym</string>
    <string name="btn_sign_out"> SIGN OUT</string>
    <!--ViewProfileOptions -->
    <string name="gym_user">Gym User</string>
    <!--userHomePage -->
    <string name="questions">Answer questions</string>
    <string name="notifications">Notifications</string>
    <string name="gym_list">View GymList</string>
    <string name="menu">Menu</string>
    <!-- add gym -->
    <string name="btn_add_gym">ADD GYM</string>
    <string name="gym_name">Name</string>
    <string name="street_number">Street number</string>
    <string name="street_name">Street name</string>
    <string name="operational_hours">Operational hours</string>
    <string name="gym_price">Price</string>
    <string name="equipment">Equipment</string>
    <string name="fitness_classes">Fitness classes</string>
    <string name="personal_trainers">Personal trainers</string>
    <string name="gym_description">Description</string>
    <string name="gym_picture">Gym picture</string>
    <string name="btn_gympicture">INSERT PICTURE</string>
    <string name="gymname_hint">Gym Name</string>
    <string name="gymstreetnumber_hint">Street Number</string>
    <string name="gymstreetname_hint">Street Name</string>
    <string name="gymdedsc_hint">Gym Description</string>
    <string name="gym_price_hint">Gym Price</string>
    <string name="equipment_hint">Gym Equipment</string>
    <string name="fitness_class_hint">Fitness Class</string>
    <string name="personal_trainer_hint">Personal Trainer</string>
    <string name="opening_gym_time">Select Opening Time</string>
    <string name="closing_gym_time">Select Closing Time</string>
    <string name="btn_gym_add_options">ADD</string>
    <string name="btnSaveAddGym">SAVE</string>
    <string name="conf_add_gym">Your account was successfully added!</string>
    <!--list of gyms -->
    <string name="list_of_gyms">Gyms</string>
    <!--Edit gym -->
    <string name="txt_edit_gym">Edit Gym</string>
    <string name="conf_edit_gym">Your changes were saved."</string>
    <!--Delete Gym-->
    <string name="txt_delete_gym">Delete Gym</string>
    <string name="btn_delete_gym_account">DELETE ACCOUNT</string>
    <string name="confirmation_message">Are you sure you want to delete your account?</string>
    <string name="cancel_deletion">CANCEL</string>
    <string name="continue_deletion">DELETE</string>
    <string name="feedback_message">Your account was deleted successfully</string>
    <string name="btn_ok">OK</string>
    <!-- GymReport -->
    <string name="txt_gym_report">Gym Report</string>
<<<<<<< HEAD
    <!-- Edit user Profile -->
    <string name="txt_delete_user_profile">Delete Profile</string>
    <string-array name="report_options_global">
        <item>Select option</item>
        <item>Most Popular Classes (All Gyms)</item>
        <item>Most Popular Equipment (All Gyms)</item>
        <item>Most Popular Trainers (All Gyms)</item>
    </string-array>

=======
>>>>>>> 536b443a752ee791cff3d560523de874951a16b6


</resources>