<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@drawable/final_home_page">

    <ImageButton
        android:id="@+id/menuButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/menu"
        android:padding="8dp"
        android:src="@drawable/outline_density_medium_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:padding="16dp"
        android:text="@string/app_title"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/light_grey"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
    android:id="@+id/bottomMenu"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <Button
        android:id="@+id/btnGoQuestions"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:backgroundTint="@color/grey"
        android:text="@string/questions"
        android:layout_marginEnd="4dp" />
    <Button
    android:id="@+id/btnGymList"
    android:layout_width="0dp"
    android:layout_height="51dp"
    android:layout_weight="1"
    android:backgroundTint="@color/grey"
    android:text="@string/gym_list"
    android:layout_marginStart="4dp" /> </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>